<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mill</string>
    <string name="usr_settings">User-account settings</string>
    <string name="save_usr">Save usernames</string>
    <string name="save_passwd">Save passwords</string>
    <string name="save_passwd_sum">Save encrypted user passwords</string>
    <string name="auto_sign_in">Automatic sign in</string>
    <string name="conn_settings">Connection settings</string>
    <string name="server">Server</string>
    <string name="server_sum">Server selection</string>
    <string name="settings">Settings</string>
    <string name="server_list">Server list</string>
    <string name="domain">Domain</string>
    <string name="domain_sum">Server domain</string>
    <string name="port">Port</string>
    <string name="port_sum">Server port</string>
    <string name="secure">SSL</string>
    <string name="secure_sum">Secured connection</string>
    <string name="selfsigned">Invalid certificates</string>
    <string name="selfsigned_sum">Accept all certificate</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="new_server">New server</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Are you sure that you want to permanently delete the selected object?</string>
    <string name="delete_user">Delete username</string>
    <string name="delete_password">Delete password</string>
    <string name="delete_password_confirm">Are you sure that you want to delete the password?</string>
    <string name="delete_all_user_confirm">If you disable username saving, stored names and passwords will be removed.\n\nAre you sure?</string>
    <string name="delete_all_password_confirm">If you disable password saving, stored passwords will be removed.\n\nAre you sure?</string>
    <string name="wait">Please wait</string> 
    <string name="waiting">Waiting...</string>
    <string name="connecting">Connecting...</string>
    <string name="connection_error">Connection error</string>
    <string name="controller_error">Programmer error</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="wrong_value">Wrong value.</string>
    <string name="no_network">Network is not available!</string>
    <string name="network_setting">Network settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="email">E-mail address</string>
    <string name="email_optional">E-mail address (optional)</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign out</string>
    <string name="signed_in">Signed in</string>
    <string name="signed_in_yet">signed in.</string>
    <string name="signed_out_yet">signed out.</string>
    <string name="request_play">would like to play.</string>
    <string name="signing_in">Signing in...</string>
    <string name="signing_out">Signing out...</string>
    <string name="loading">Loading...</string>
    <string name="have_account">Don\'t have an account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_error">Sign In Error</string>
    <string name="sign_in_failed">Wrong username or password.</string>
    <string name="usercount_1">So far</string>
    <string name="usercount_2">user has registrated.</string>
    <string name="usercount_3">users have registrated.</string>
    <string name="user_format">Invalid username.</string>
    <string name="user_not_free">Username not free.</string>
    <string name="password_format">Invalid password.</string>
    <string name="password_not_user">Password is not username!!!</string>
    <string name="password_not_match">Passwords do not match.</string>
    <string name="email_format">Invalid e-mail.</string>
    <string name="email_not_free">E-mail not free.</string>
    <string name="reset">Reset</string>
    <string name="new_img">New image</string>
    <string name="captcha">Enter the text from the image!</string>
    <string name="captcha_failed">Text didn\'t match. Please try again!</string>
    <string name="server_restart">Server was restarted.</string>
    <string name="server_kick">You have been kicked</string>
    <string name="friends">Friends</string>
    <string name="wished_friends">Wished friends</string>
    <string name="possible_friends">Possible friends</string>
    <string name="blocked_users">Blocked users</string>
    <string name="empty_list">Empty list.</string>
    <string name="state_change">State change</string>
    <string name="online">Online</string>
    <string name="invisible">Invisible</string>
    <string name="user_settings">User settings</string>
    <string name="user_setting_options">User setting options</string>
    <string name="user_datas">User datas</string>
    <string name="user_actions">User actions</string>
    <string name="validate_email">Validate e-mail</string>
    <string name="validate_email_sum">Send validation email again</string>
    <string name="common">Common</string>
    <string name="empty_email_warning">Please enter your e-mail!</string>
    <string name="validate_warning">Please validate your e-mail!</string>
    <string name="password_input">Enter your current password!</string>
    <string name="account_suspend">Suspend account</string>
    <string name="account_suspend_warning">If you suspend your account, your personal data and permission will be removed.\n\nAre you sure?</string>
    <string name="email_not_changed">E-mail was not changed.</string>
    <string name="password_not_changed">Password was not changed.</string>
    <string name="wrong_password">Wrong password, try again!</string>
    <string name="not_usable">You can not use this option.</string>
    <string name="avatar">Avatar</string>
    <string name="avatar_enabled">Avatar enabled</string>
    <string name="avatar_remove">Remove avatar</string>
    <string name="replace">Replace</string>
    <string name="no_avatar">NO AVATAR</string>
    <string name="personal_datas">Personal datas</string>
    <string name="personal_data_clear">Clear personal datas</string>
    <string name="personal_data_clear_warning">Are you sure that you want to clear your personal datas?</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="inverse_name">Inverse name</string>
    <string name="birthday">Birthday</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="location">Location</string>
    <string name="country">Country</string>
    <string name="region">Region</string>
    <string name="city">City</string>
    <string name="other">Other</string>
    <string name="others">Others</string>
    <string name="permissions">Permissions</string>
    <string name="permgrp0">Target permissions</string>
    <string name="permgrp1">Normal state permissions</string>
    <string name="permgrp2">Inverse state permissions</string>
    <string name="permgrp3">System permissions</string>
    <string name="perm0">Hide statistics</string>
    <string name="perm1">Detect invisible status</string>
    <string name="perm2">Detect suspended players</string>
    <string name="perm3">Hidden mode</string>
    <string name="perm4">Send person message</string>
    <string name="perm5">Send system message</string>
    <string name="perm6">Player bann</string>
    <string name="perm7">Player suspend</string>
    <string name="perm8">Permission edit</string>
    <string name="perm9">Shield mode</string>
    <string name="chat">Chat</string>
    <string name="new_message1">new message</string>
    <string name="new_message2">new messages</string>
    <string name="insert_smiley">Insert smiley</string>
    <string name="delete_messages">Delete messages</string>
    <string name="delete_messages_confirm">If you choose yes, every message will be removed permanently.\n\nAre you sure?</string>
    <string name="load_messages">Load messages</string>
    <string name="emo_im_happy">Happy</string>
    <string name="emo_im_sad">Sad</string>
    <string name="emo_im_winking">Winking</string>
    <string name="emo_im_tongue_sticking_out">Tongue sticking out</string>
    <string name="emo_im_surprised">Surprised</string>
    <string name="emo_im_kissing">Kissing</string>
    <string name="emo_im_yelling">Yelling</string>
    <string name="emo_im_cool">Cool</string>
    <string name="emo_im_money_mouth">Money mouth</string>
    <string name="emo_im_foot_in_mouth">Foot in mouth</string>
    <string name="emo_im_embarrassed">Embarrassed</string>
    <string name="emo_im_angel">Angel</string>
    <string name="emo_im_undecided">Undecided</string>
    <string name="emo_im_crying">Crying</string>
    <string name="emo_im_lips_are_sealed">Lips are sealed</string>
    <string name="emo_im_laughing">Laughing</string>
    <string name="emo_im_wtf">Confused</string>
</resources>