<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<RelativeLayout android:id="@+id/rlAvatar"
		android:background="@drawable/white_border"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<TextView android:id="@+id/tvAvatar"
			android:text="@string/no_avatar"
			android:textSize="40dp"
			android:visibility="invisible"
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content" />
		<ImageView android:id="@+id/ivAvatar"
			android:scaleType="matrix"
			android:layout_height="fill_parent"
			android:layout_width="fill_parent" />
		<Button android:id="@+id/btGallery"
			android:text="@string/replace"
			android:layout_marginRight="3dp"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_alignParentBottom="true" />
		<ProgressBar style="?android:attr/progressBarStyleLarge"
			android:id="@+id/pbAvatar"
			android:visibility="gone"
			android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</RelativeLayout>
    <RelativeLayout android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
    	android:layout_height="fill_parent"
    	android:layout_width="match_parent">
        <Button android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:id="@+id/btCancel"
        	android:text="@string/cancel"
        	android:minWidth="100dp"
        	android:layout_centerVertical="true"
        	android:layout_alignParentLeft="true" />
        <Button android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:id="@+id/btOk"
        	android:text="@string/ok"
        	android:minWidth="100dp"
        	android:layout_centerVertical="true"
        	android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>