<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ScrollView android:layout_margin="5dp"
    	android:layout_width="match_parent"
    	android:layout_height="fill_parent"
    	android:fillViewport="true">
    	<RelativeLayout android:layout_height="fill_parent"
	    		android:layout_width="match_parent">
	        <LinearLayout android:orientation="vertical"
	    		android:layout_width="match_parent"
	    		android:layout_height="wrap_content">
		    	<RelativeLayout android:layout_height="wrap_content"
		    		android:layout_width="match_parent">
		    		<TextView android:text="@string/username"
		    			android:layout_alignParentLeft="true"
		    			android:layout_width="wrap_content"
		    			android:layout_height="wrap_content"
		    			android:textAppearance="?android:attr/textAppearanceMedium" />
		    		<TextView android:text="10:00"
		    			android:id="@+id/tvCountdown"
		    			android:layout_alignParentRight="true"
		    			android:layout_width="wrap_content"
		    			android:layout_height="wrap_content"
		    			android:textAppearance="?android:attr/textAppearanceMedium" />
		    	</RelativeLayout>
		    	<org.dyndns.fzoli.android.widget.ProgressEditTextLayout android:layout_width="match_parent"
		    		android:layout_height="wrap_content"
		    		android:id="@+id/etlUser">
		    		<requestFocus></requestFocus>
		    	</org.dyndns.fzoli.android.widget.ProgressEditTextLayout>
			    <TextView android:text="@string/password"
			    	android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:textAppearance="?android:attr/textAppearanceMedium" />
			    <org.dyndns.fzoli.android.widget.ProgressEditTextLayout android:layout_width="match_parent"
		    		android:layout_height="wrap_content"
		    		android:inputType="textPassword"
		    		android:id="@+id/etlPassword" />
		    	<TextView android:text="@string/password_again"
			    	android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:textAppearance="?android:attr/textAppearanceMedium" />
		    	<org.dyndns.fzoli.android.widget.ProgressEditTextLayout android:layout_width="match_parent"
		    		android:layout_height="wrap_content"
		    		android:inputType="textPassword"
		    		android:id="@+id/etlPasswordAgain" />
		    	<TextView android:text="@string/email_optional"
			    	android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:textAppearance="?android:attr/textAppearanceMedium" />
		    	<org.dyndns.fzoli.android.widget.ProgressEditTextLayout android:layout_width="match_parent"
		    		android:layout_height="wrap_content"
		    		android:inputType="textEmailAddress"
		    		android:id="@+id/etlEmail" />
			    <Button android:text="@string/sign_up"
			    	android:id="@+id/btSignUp"
			    	android:layout_marginTop="10dp"
			    	android:layout_marginBottom="20dp"
			    	android:layout_width="fill_parent"
			    	android:layout_height="wrap_content" />
			    
	    	</LinearLayout>
    		<TextView android:text="So far 0 user has registrated."
    			android:layout_alignParentBottom="true"
	    		android:gravity="center"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:id="@+id/tvUserCount" />
    	</RelativeLayout>
    </ScrollView>
</LinearLayout>